<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="palindrome">Palindrome</string>
    <string name="name">Name</string>
    <string name="check">CHECK</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="next">NEXT</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="lastname">Lastname</string>
    <string name="email_email_com">email@email.com</string>
    <string name="firstname">Firstname</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="is_palindrome">Is Palindrome</string>
    <string name="no_palindrome">Not Palindrome</string>
    <string name="ok">OK</string>
    <string name="yes_it_s_palindrome">Yes, it\'s palindrome</string>
    <string name="no_it_s_not_palindrome">No, it\'s not palindrome</string>
    <string name="user_image">User Image</string>
    <string name="name_can_t_be_empty">Name can\'t be empty</string>
    <string name="palindrome_cant_be_empty">Palindrome cant be empty</string>
</resources>